# Thesis-PairwiseRanking-WebApp

./: .gitignore  README.md  shell.nix
backend/: .gitignore  pyproject.toml  shell.nix
backend/webrankit/: __init__.py  anilist.py  app.py  extract.py  model.py  pairwise.py
backend/webrankit/model/: __init__.py  base.py  comparison.py  user.py
backend/webrankit/resource/: __init__.py  auth.py  compare.py  ranking.py  user.py  views.py
frontend/: package-lock.json  package.json  shell.nix
frontend/npm_global/: generate.sh  node-packages.json  node-packages.nix
frontend/src/: App.vue  main.js  rest.js
frontend/src/router/: index.js
frontend/src/views/: ComparePage.vue  HelloApi.vue  LoginPage.vue  MedialistsPage.vue  RankingPage.vue  RankingsPage.vue  __hello.vue
