[tool.poetry]
name = "webrankit"
version = "0.1.0"
description = ""
authors = ["Sinity <ezo.dev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.1"
Pillow = "^8.0.1"
Flask = "^1.1.2"
Flask-Cors = "^3.0.9"
peewee = "^3.14.2"

[tool.poetry.dev-dependencies]
mypy = "^0.790"
black = "^20.8b1"
python-language-server = "^0.36.2"
pyls-mypy = "^0.1.8"
pynvim = "^0.4.2"
epc = "^0.0.5"
importmagic = "^0.1.7"
isort = "^5.7.0"
pyls-isort = "^0.2.0"
pyls-black = "^0.4.6"

[tool.poetry.scripts]
backend_run = 'webrankit.app:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
